--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -61,9 +61,7 @@
     TeXtitle      = {Distribuované algoritmy pro rekonfiguraci platformy RoFI},
     keywords      = {modulárny, robot, distribuovaný, algoritmus, rekonfigurácia, platforma RoFI, MPI, openMPI},
     TeXkeywords   = {modulárny, robot, distribuovaný, algoritmus, rekonfigurácia, platforma RoFI, MPI, openMPI},
-    abstract      = {This is the abstract of my thesis, which can
-
-                     span multiple paragraphs.},
+    abstract      = {Platforma RoFI je nová modulárna robotická platforma vyvíjaná v laboratóriu ParaDiSe. Táto práca stavia na už definovaných konceptoch platformy a prináša nový pohľad na rekonfigurácie modularnych robotov tejto platformy. Táto práca navrhuje a implementuje riešenie problému rekonfigurácie robotov z distribuovaného hľadiska, teda z pohľadu jedného modulu platformy na problém rekonfigurácie celého robota. Táto práca prezentuje nástroj \textit{rofi-distribute}, ktorý poskytuje dva algoritmy na simuláciu distribuovanej rekonfigurácie, ktoré boli ostatestované na množstve príkladov. Výsledkami práce sú porovnanie navrhnutých algoritmov medzi sebou navzájom, ale aj porovnanie voči centralizovanému riešeniu problému rekonfigurácia z pohľadu času výpočtov a dĺžok samotných rekonfigurácií. },
     thanks        = {Veľká vďaka patrí všetkým ľudom v laboratóriu ParaDiSe za príjemnú atmosféru pri práci a každodennú čokoládu, hlavne celému tímu, ktorý sa podieľa na vývoji platformy RoFI, a to hlavne vedúcej práce Ivane Černej a ďalším členom: Jiřímu Barnatovi, Janovi Mrázkovi, Viktórii Vozárovej a Markéte Naušovej, ktorí boli vždy ochotní zodpovedať mi otázky, prípadne konzultovať nápady. 
     
     Rovnaká vďaka patrí aj Vladimírovi Štillovi za pohotovú pomoc pri technických komplikáciách a Lukášovi Korenčikovi za podporu pri práci počas sviatkov a víkendov. V neposlednom rade aj Tomášovi Szaniszlovi za podporu a korekcie textu práce do neskorých nočných hodín. A aj rodine a kamarátom za ich podporu nielen pri tvorbe tejto práce. },
